--- a/app/admin/view/auth/group.html
+++ b/app/admin/view/auth/group.html
@@ -36,7 +36,14 @@
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">{:lang('del')}</a>
     {{# } }}
 </script>
-<script type="text/html" id="status">
+<script type="text/html" id="is_lock">
+    {{# if(d.id==1){ }}
+    <input type="checkbox" disabled name="status" value="{{d.id}}" lay-skin="switch" lay-text="开启|关闭" lay-filter="status" checked>
+    {{# }else{  }}
+    <input type="checkbox" name="status" value="{{d.id}}" lay-skin="switch" lay-text="开启|关闭" lay-filter="status" {{ d.status == 1 ? 'checked' : '' }}>
+    {{# } }}
+</script>
+<script type="text/html" id="enable">
     {{# if(d.id==1){ }}
     <input type="checkbox" disabled name="status" value="{{d.id}}" lay-skin="switch" lay-text="开启|关闭" lay-filter="status" checked>
     {{# }else{  }}
@@ -63,10 +70,12 @@
             cols: [[
                 {checkbox: true, fixed: true},
                 {field: 'id', title: 'ID', width: 80, fixed: true, sort: true},
-                {field: 'title', title: '组名', width: 150, fixed: true,},
-                {field: 'status', title: '状态', width: 180, templet:'#status'},
+                {field: 'title', title: '角色组', width: 150, fixed: true,},
+                {field: 'is_lock', title: '锁定状态', width: 180, templet:'#is_lock'},
+                {field: 'enable', title: '启用状态', width: 180, templet:'#enable'},
                 {field: 'create_time', title: '添加时间', width: 180,templet:'#create_time'},
                 {field: 'update_time', title: '修改时间', width: 180,templet:'#update_time'},
+                {field: 'status', title: '说明', width: 180, templet:'#status'},
                 {width:200, align:'center', toolbar: '#action'}
 
             ]],
