数据表格完善弹框事件

--- a/app/admin/view/Auth/edit.html
+++ b/app/admin/view/Auth/edit.html
@@ -4,10 +4,10 @@
     <div class="LM-main">
         <div class="admin-main layui-anim layui-anim-upbit">
             <fieldset class="layui-elem-field layui-field-title">
-                <legend>{:lang('add')}权限节点</legend>
+                <!-- <legend>{:lang('add')}权限节点</legend> -->
             </fieldset>
             <blockquote class="layui-elem-quote">
-                1、控制器/方法 例如 Wechat/index
+                <!-- 1、控制器/方法 例如 Wechat/index -->
             </blockquote>
             <form class="layui-form layui-form-pane" lay-filter="form">
                 <div class="layui-form-item">
@@ -58,18 +58,18 @@
                         <input type="hidden" name="id">
                     </div>
                 </div>
-                <div class="layui-form-item">
+                <!-- <div class="layui-form-item">
                     <div class="layui-input-inline">
                         <button type="button" class="layui-btn" lay-submit="" lay-filter="submit">立即提交</button>
                         <a href="{:url('adminRule')}" class="layui-btn layui-btn-primary">返回</a>
                     </div>
-                </div>
+                </div> -->
             </form>
         </div>
     </div>
 </div>
 
-{include file="common/footer"/}
+
 <script>
     layui.config({
         base: '/static/plugins/layui/extend/'
