--- a/app/admin/view/Role/index.html
+++ b/app/admin/view/Role/index.html
@@ -78,7 +78,7 @@ console.log(232322);
                 // ,cellMinWidth:120
                 ,cols: [[
                     {checkbox: true, fixed: true}
-                   ,{field: 'id', title: 'ID',align: 'center', fixed: true, sort: true}
+                   ,{field: 'id', title: 'ID',align: 'center', fixed: true}
                    ,{field: 'name', title: '角色组', fixed: true}
                    ,{field: 'is_lock', title: '锁定状态', sort: true}
                    ,{field: 'enable', title: '启用状态', sort: true}
