--- a/app/admin/view/layout.html
+++ b/app/admin/view/layout.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="__PLUGINS__/layui/layui.js"></script>
     <script type="text/javascript" src="__JS_ADMIN__/admin.js"></script>
     <script type="text/javascript" src="__JS_ADMIN__/common.js"></script>
+    <script type="text/javascript" src="__JS_ADMIN__/tablecommon.js"></script>
 
     <style>
 
@@ -53,14 +54,14 @@
 
     <script>
 
-        // var public = "__PUBLIC_ADMIN__/lib/modules/";
+        // var public = "__JS_ADMIN__/";
+        // console.log(public);
         // layui.config({
         //     base: public
         // }).extend({
-        //     index: 'common'
-        // }).use('common');
-        console.log(111111);
-        console.log($('#barDemo'));
+        //     admin: 'admin',
+        // }).use(['admin']);
+        
     </script>
 
 
