--- a/public/static/admin/css/admin.css
+++ b/public/static/admin/css/admin.css
@@ -130,3 +130,258 @@
         transition:all .2s;display:none;
     }
 }
+
+/*移动端遮罩层*/
+.layuiadmin-make {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    z-index: 1000;
+    background: rgba(0, 0, 0, .5);
+    display: none;
+}
+/**tab选项卡 */
+.admin-tab {
+    margin: 0px;
+    overflow: hidden;
+    height: 100% !important;
+}
+
+.admin-tab .layui-tab-content {
+    height: calc(100% - 37px) !important;
+}
+
+.admin-tab .layui-tab-content .layui-tab-item {
+    height: 100%;
+}
+
+.admin-tab .layui-tab-content {
+    padding: 0px;
+}
+
+.admin-tab .layui-tab-title {
+    border: none;
+    border: 1px solid whitesmoke;
+    background-color: white;
+}
+
+.admin-tab .layui-tab-title li {
+    border-right: 1px solid whitesmoke;
+    color: dimgray;
+}
+
+.admin-tab .layui-tab-title .layui-tab-bar {
+    display: none;
+}
+
+.admin-tab .layui-tab-title .layui-this:after {
+    display: none;
+}
+
+.admin-tab .layui-tab-title .admin-tab-active {
+    display: inline-block;
+    background-color: lightgray;
+    width: 9px;
+    height: 9px;
+    border-radius: 30px;
+    margin-right: 5px;
+}
+
+.admin-tab .layui-tab-title .layui-this .admin-tab-active {
+    background-color: #1aa094;
+}
+
+.admin-tab > .layui-tab-title, .admin-tab > .close-box {
+    height: 35px !important;
+}
+
+.admin-tab > .layui-tab-title li, .admin-tab > .close-box li {
+    line-height: 35px !important;
+}
+
+.admin-tab .layui-tab-title span {
+    color: #acafb1;
+}
+
+.admin-tab .layui-tab-title .layui-this span {
+    color: dimgray;
+}
+
+.admin-tab .layui-tab-title .layui-tab-close {
+    font-size: 12px !important;
+    width: 14px !important;
+    height: 14px !important;
+    line-height: 16px !important;
+}
+
+.admin-tab .layui-tab-title .layui-tab-close:hover {
+    border-radius: 4em;
+    background: #ff5722;
+}
+
+.admin-tab .layui-tab-title .disable-close + .layui-tab-close {
+    display: none;
+}
+
+.admin-tab .layui-tab-title .able-close + .layui-tab-close {
+    display: inline-block;
+}
+
+.admin-tab .layui-tab-control > li {
+    position: absolute;
+    top: 0px;
+    height: 35px;
+    line-height: 35px;
+    width: 35px;
+    text-align: center;
+    background-color: white;
+    border-top: whitesmoke 1px solid;
+    border-bottom: whitesmoke 1px solid;
+}
+
+.admin-tab .admin-tab-roll-left {
+    left: 0px;
+    border-right: whitesmoke 1px solid;
+    border-left: whitesmoke 1px solid;
+}
+
+.admin-tab .admin-tab-roll-right {
+    right: 35px;
+    border-left: 1px solid whitesmoke;
+}
+
+.admin-tab .layui-tab-tool {
+    right: 0px;
+    border-left: 1px solid whitesmoke;
+}
+
+.admin-tab .layui-tab-control .layui-tab-tool,
+.admin-tab .layui-tab-control .admin-tab-roll-left,
+.admin-tab .layui-tab-control .admin-tab-roll-right {
+    display: none;
+}
+
+.admin-tab.layui-tab-roll .layui-tab-control .admin-tab-roll-left,
+.admin-tab.layui-tab-roll .layui-tab-control .admin-tab-roll-right {
+    display: block;
+}
+
+.admin-tab.layui-tab-roll .layui-tab-control .admin-tab-roll-right {
+    right: 0px;
+    border-right: 1px solid whitesmoke;
+}
+
+.admin-tab.layui-tab-roll .layui-tab-title {
+    padding-left: 35px;
+    padding-right: 35px;
+}
+
+
+.admin-tab.layui-tab-tool .layui-tab-control .layui-tab-tool {
+    display: block;
+}
+
+.admin-tab.layui-tab-tool .layui-tab-title {
+    padding-left: 0px;
+    padding-right: 35px;
+}
+
+
+.admin-tab.layui-tab-rollTool .layui-tab-title {
+    padding-left: 35px;
+    padding-right: 80px;
+}
+
+.admin-tab.layui-tab-rollTool .layui-tab-control .admin-tab-roll-left,
+.admin-tab.layui-tab-rollTool .layui-tab-control .admin-tab-roll-right,
+.admin-tab.layui-tab-rollTool .layui-tab-control .layui-tab-tool {
+    display: block;
+}
+
+.admin-tab .layui-tab-tool .layui-nav {
+    position: absolute;
+    height: 43px !important;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    background: 0 0;
+}
+
+.admin-tab .layui-tab-tool .layui-nav-item {
+    height: 35px;
+}
+
+.admin-tab .layui-tab-tool .layui-nav-bar {
+    display: none;
+}
+
+.admin-tab .layui-tab-tool .layui-nav-child {
+    left: auto;
+    top: 45px;
+    right: 3px;
+    width: 120px;
+    border: 1px solid whitesmoke;
+}
+
+.admin-tab .layui-tab-tool .layui-this a {
+    background-color: #009688;
+}
+
+.admin-tab-loading {
+    position: absolute;
+    display: none;
+    width: 100%;
+    height: calc(100% - 37px);
+    top: 37px;
+    z-index: 19;
+    background-color: #fff
+}
+
+.admin-tab-loading.close {
+    animation: close 1s;
+    -webkit-animation: close 1s;
+    animation-fill-mode: forwards;
+}
+
+/**左侧菜单栏 (通用) */
+.layui-side.layui-bg-black {
+    transition: all .2s;
+}
+
+.layui-side.layui-bg-black > .admin-menu-left > ul {
+    transition: all .2s;
+}
+
+.layui-side.layui-bg-black > .admin-menu-left > ul > .layui-nav-item:first-child {
+    border-top: 1px solid #4b5461;
+}
+
+.admin-menu-left .layui-nav .layui-nav-item a {
+    height: 40px;
+    line-height: 40px;
+    padding-right: 30px;
+}
+
+.admin-menu-left .layui-nav .layui-nav-item > a {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.admin-menu-left .layui-nav .layui-nav-child .layui-nav-child {
+    background: 0 0 !important
+}
+
+.admin-menu-left .layui-nav .layui-nav-more {
+    right: 15px;
+}
+
+.admin-menu-left .layui-nav .layui-nav-item a:hover {
+    background-color: transparent !important;
+}
+
+.admin-menu-left .layui-nav {
+    background-color: transparent !important;
+}
